[workspace]
resolver = "2"
members = [
    "shared",
    "relay",
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZTunnel Team"]
license = "MIT"
repository = "https://github.com/whoamikiddie/ztunnel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
tokio-tungstenite = "0.21"
hyper = { version = "1.1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS
rustls = "0.22"
tokio-rustls = "0.25"

# Shared crate
ztunnel-shared = { path = "shared" }
