[package]
name = "ztunnel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ztunnel"
path = "src/main.rs"

[dependencies]
ztunnel-shared = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
