[package]
name = "ztunnel-relay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ztunnel-relay"
path = "src/main.rs"

[dependencies]
ztunnel-shared = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
